--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
   <body>
     <div class="blog">
+      <div class="splash">
+        <div class="splash-inner">
+          <h1 class="logo">film music</h1>
+        </div>
+      </div>
+
       <div class="container">
-        <h1 class="logo">my blog</h1>
         <main class="wrapper">
           <aside class="sidebar">
             <h2 class="section-title">All posts</h2>
