fix setting height of posts section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <section class="mobile-menu col-sm-12">
             <ul class="menu">
               <li><a href="#" class="films">FILMS</a>
-                <ul class="list titles"></ul>
+                <ul class="mobile-list"></ul>
               </li>
               <li><a href="#" class="composers">COMPOSERS</a>
                 <ul class="list authors"></ul>
