Fix recalculation function and fix media queries

--- a/index.html
+++ b/index.html
@@ -13,26 +13,60 @@
       <div class="splash">
       </div>
 
+      <h1 class="logo">film music</h1>
+
       <div class="container">
         <main class="row">
-          <h1 class="logo col-12">film music</h1>
 
-          <section class="mobile-menu col-sm-12">
-            <ul class="menu">
-              <li><a href="#" class="films">FILMS</a>
-                <ul class="mobile-list"></ul>
-              </li>
-              <li><a href="#" class="composers">COMPOSERS</a>
-                <ul class="list authors"></ul>
-              </li>
-            </ul>
-          </section>
+          <!-- <div class="sidebar-wrap col-md-12"> -->
+            <aside class="sidebar sidebar-left">
+              <h2 class="section-title">
+                <a href="#">Films</a>
+                <ul class="list titles" id="titles">
+                </ul>
+              </h2>
 
-          <aside class="sidebar">
-            <h2 class="section-title">All posts</h2>
-            <ul class="list titles" id="titles">
-            </ul>
-          </aside>
+            </aside>
+
+            <aside class="sidebar sidebar-right">
+              <h2 class="section-title"><a href="#">Authors
+                <ul class="list authors">
+                  <li>
+                    <a href="#">
+                      <span class="author-name">Kitty Toebean</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span class="author-name">Theo Tabby</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span class="author-name">George Tuxedo</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span class="author-name">Marion Berry</span>
+                    </a>
+                  </li>
+                </ul>
+              </a></h2>
+
+              <div class="tags-wrap">
+                <h2 class="section-title">Tags</h2>
+                <ul class="list tags">
+                  <li><a href="#">design</a> <span>(6)</span></li>
+                  <li><a href="#">code</a> <span>(5)</span></li>
+                  <li><a href="#">tutorials</a> <span>(4)</span></li>
+                  <li><a href="#">reviews</a> <span>(4)</span></li>
+                  <li><a href="#">news</a> <span>(6)</span></li>
+                </ul>
+              </div>
+
+            </aside>
+        <!--   </div> -->
 
           <section class="posts col-sm-12">
             <article class="post active" id="article-1">
@@ -230,40 +264,8 @@
             </article>
           </section>
 
-          <aside class="sidebar">
-            <h2 class="section-title">Tags</h2>
-            <ul class="list tags">
-              <li><a href="#">design</a> <span>(6)</span></li>
-              <li><a href="#">code</a> <span>(5)</span></li>
-              <li><a href="#">tutorials</a> <span>(4)</span></li>
-              <li><a href="#">reviews</a> <span>(4)</span></li>
-              <li><a href="#">news</a> <span>(6)</span></li>
-            </ul>
-            <h2 class="section-title">Authors</h2>
-            <ul class="list authors">
-              <li>
-                <a href="#">
-                  <span class="author-name">Kitty Toebean</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">Theo Tabby</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">George Tuxedo</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span class="author-name">Marion Berry</span>
-                </a>
-              </li>
-            </ul>
-          </aside>
         </main>
+
       </div>
     </div>
     <script src="js/script.js"></script>
