--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
 
           <!-- <div class="sidebar-wrap col-md-12"> -->
             <aside class="sidebar sidebar-left">
-              <h2 class="section-title">
-                <a href="#">Films</a>
-                <ul class="list titles" id="titles">
-                </ul>
+              <h2>
+                <a href="#" class="section-title">Films
+                  <ul class="list titles" id="titles">
+                  </ul>
+                </a>
               </h2>
 
             </aside>
 
             <aside class="sidebar sidebar-right">
-              <h2 class="section-title"><a href="#">Authors
-                <ul class="list authors">
-                </ul>
-              </a></h2>
+              <h2>
+                <a href="#" class="section-title">Authors
+                  <ul class="list authors">
+                  </ul>
+                </a>
+              </h2>
 
               <div class="tags-wrap">
                 <h2 class="section-title">Tags</h2>
